--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PositionClosedLoop</name>
+	<name>CTRE_PositionClosedLoop</name>
 	<comment>Project PositionClosedLoop created by Buildship.</comment>
 	<projects>
 	</projects>
